HK & SID02: update

--- a/JUICE-CDF-HF-HK-sample.ipynb
+++ b/JUICE-CDF-HF-HK-sample.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF HK: QL -- 2024/7/9"
+    "# JUICE RPWI HF HK: QL -- 2024/7/17"
    ]
   },
   {
@@ -63,6 +63,7 @@
    "outputs": [],
    "source": [
     "# V1-software\n",
+    "#date='20230523'\n",
     "#date='20230526'\n",
     "#date='20230601'\n",
     "#date='20230712'\n",
@@ -113,7 +114,7 @@
     "date='20240706'\n",
     "\n",
     "# Ground\n",
-    "# date='HK'"
+    "# date='HK'           # linked to /Users/user/0-python/JUICE_data/HK/HK/"
    ]
   },
   {
@@ -123,14 +124,14 @@
    "outputs": [],
    "source": [
     "# *** Directory set: set by User ***\n",
-    "work_dir = '/Users/user/0-python/JUICE_python/ql/'        # Plot dump folder\n",
+    "work_dir = '/Users/user/0-python/JUICE_python/ql/'          # Plot dump folder\n",
     "\n",
     "if date[0:2] == '20':\n",
     "    base_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/'\n",
     "elif date[0:2] == 'HK':\n",
-    "    base_dir = '/Users/user/0-python/JUICE_data/HK/'\n",
+    "    base_dir = '/Users/user/0-python/JUICE_data/HK/'        # Ground test   [with Link revision]\n",
     "else:\n",
-    "    base_dir = '/Users/user/0-python/JUICE_data/SYS/'\n",
+    "    base_dir = '/Users/user/0-python/JUICE_data/SYS/'       # Prelaunch System Test\n",
     "print(base_dir)"
    ]
   },
@@ -298,7 +299,9 @@
     "if err_lvps == 0:\n",
     "    ax3.plot(hk_lvps.epoch, hk_lvps.vol_hf_85, '.g', markersize=1, label='HF 8.5V (LVPS)')\n",
     "    ax3.plot(hk_lvps.epoch, hk_lvps.vol_hf_33, '.r', markersize=1, label='HF 3.3V (LVPS)')\n",
-    "    ax3.plot(hk_lvps.epoch, hk_lvps.hf_on_off, '.k', markersize=1, label='HF ON/OFF (LVPS)')\n",
+    "    ax3.plot(hk_lvps.epoch, hk_lvps.hf_on_off, '.k', markersize=1, label='HF ON/off (LVPS)')\n",
+    "    ax3.plot(hk_hf.epoch, hk_hf.v1_8+5, '.b', markersize=3, label='HF 1.8V off/ON (HF)')\n",
+    "    #\n",
     "    ax4.plot(hk_lvps.epoch, hk_lvps.cur_hf_33, '.r', markersize=1, label='HF 3.3V (LVPS)')\n",
     "    ax4.plot(hk_lvps.epoch, hk_lvps.cur_hf_85*10, '.g', markersize=1, label='HF 8.5V (LVPS) [x10]')\n",
     "ax3.set_ylabel('Voltage [V]');  ax3.legend()\n",
@@ -307,7 +310,7 @@
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
     "    ax5.plot(hk_hf.epoch, hk_hf.heater_ena, '.r', markersize=1, label='Heater ENA')\n",
-    "    ax5.plot(hk_hf.epoch, hk_hf.pol + 0.2, '.g', markersize=1, label='Pol Master/Slave')\n",
+    "    # ax5.plot(hk_hf.epoch, hk_hf.pol + 0.2, '.g', markersize=1, label='Pol Master/Slave')\n",
     "    if err_hf2 != 0:\n",
     "        ax5.plot(hk_hf.epoch, hk_hf.calsig_ena+0.1, '.b', label='Cal signal ENA')\n",
     "ax5.set_ylabel('HF status');  ax5.legend();  ax5.set_xlabel('UT')\n",
@@ -322,6 +325,16 @@
     "#-----------------------------------------------------------------\n",
     "png_fname = work_dir+'JUICE_RPWI_HF_HK_'+date+'.png'\n",
     "fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(hk_hf.v1_8)\n",
+    "# print(hk_hf.heater_ena)"
    ]
   },
   {
@@ -363,7 +376,9 @@
     "if err_lvps == 0:\n",
     "    ax3.plot(hk_lvps.vol_hf_85, '.g', markersize=1, label='HF 8.5V (LVPS)')\n",
     "    ax3.plot(hk_lvps.vol_hf_33, '.r', markersize=1, label='HF 3.3V (LVPS)')\n",
-    "    ax3.plot(hk_lvps.hf_on_off, '.k', markersize=1, label='HF ON/OFF (LVPS)')\n",
+    "    ax3.plot(hk_lvps.hf_on_off, '.k', markersize=1, label='HF ON/off (LVPS)')\n",
+    "    ax3.plot(hk_hf.v1_8+5, '.b', markersize=3, label='HF 1.8V off/ON (HF)')\n",
+    "    #\n",
     "    ax4.plot(hk_lvps.cur_hf_33, '.r', markersize=1, label='HF 3.3V (LVPS)')\n",
     "    ax4.plot(hk_lvps.cur_hf_85*10, '.g', markersize=1, label='HF 8.5V (LVPS) [x10]')\n",
     "ax3.set_ylabel('Voltage [V]');  ax3.legend()\n",
@@ -372,7 +387,7 @@
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
     "    ax5.plot(hk_hf.heater_ena, '.r', markersize=1, label='Heater ENA')\n",
-    "    ax5.plot(hk_hf.pol + 0.2, '.g', markersize=1, label='Pol Master/Slave')\n",
+    "    # ax5.plot(hk_hf.pol + 0.2, '.g', markersize=1, label='Pol Master/Slave')\n",
     "    if err_hf2 != 0:\n",
     "        ax5.plot(hk_hf.calsig_ena+0.1, '.b', markersize=1, label='Cal signal ENA')\n",
     "ax5.set_ylabel('HF status');  ax5.legend()\n",
