--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -86,8 +86,8 @@
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)\n",
+    "cf, p_max0, p_min0 = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0)\n",
     "\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder"
    ]
@@ -100,6 +100,7 @@
    "outputs": [],
    "source": [
     "# *** Ground Test data: Ver.2 ***\n",
+    "\"\"\"\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name = 'SID23_20231024-0011.cdf'\n",
@@ -141,7 +142,6 @@
     "#                  'JUICE_L1a_RPWI-HF-SID23_20000108T063854-20000108T064114_V01___TMIDX_00000.bin.cdf',    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM00\n",
     "#                  'JUICE_L1a_RPWI-HF-SID23_20000108T064154-20000108T064314_V01___TMIDX_00001.bin.cdf',    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM01\n",
     "#                 ]\n",
-    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -369,6 +369,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f853b252",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"N_samp:\", data.N_samp[0], \"   decimation:\", juice_cdf._sample_rate(data.decimation[0])) \n",
+    "peak_E = np.ravel(data.Eu_i[:][:]); peak_f = np.argmax(peak_E); print(\"Peak Eu_i:\", '{:.2e}'.format(peak_E[peak_f]))\n",
+    "peak_E = np.ravel(data.Ev_i[:][:]); peak_f = np.argmax(peak_E); print(\"Peak Ev_i:\", '{:.2e}'.format(peak_E[peak_f]))\n",
+    "peak_E = np.ravel(data.Ew_i[:][:]); peak_f = np.argmax(peak_E); print(\"Peak Ew_i:\", '{:.2e}'.format(peak_E[peak_f]))\n",
+    "peak_E = np.ravel(data.Eu_q[:][:]); peak_f = np.argmax(peak_E); print(\"Peak Eu_q:\", '{:.2e}'.format(peak_E[peak_f]))\n",
+    "peak_E = np.ravel(data.Ev_q[:][:]); peak_f = np.argmax(peak_E); print(\"Peak Ev_q:\", '{:.2e}'.format(peak_E[peak_f]))\n",
+    "peak_E = np.ravel(data.Ew_q[:][:]); peak_f = np.argmax(peak_E); print(\"Peak Ew_q:\", '{:.2e}'.format(peak_E[peak_f]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a2b60696",
    "metadata": {},
@@ -394,6 +410,7 @@
     "print(spec.EE.shape, n_time0, n_block0, n_length0)\n",
     "print(f_min, \"kHz -\", f_max, \"kHz  (Center:\", data.freq_center[0], \"kHz  df:\", d_freq, \"kHz\")\n",
     "\n",
+    "print(\"f_center:\", data.freq_center[0], \"  df:\", spec.freq[1]-spec.freq[0])\n",
     "print(data.freq_center)"
    ]
   },
@@ -413,6 +430,7 @@
    "outputs": [],
    "source": [
     "n_sweep = 0\n",
+    "p_min = p_raw_min-4;  p_max = p_raw_max\n",
     "\n",
     "fig = plt.figure(figsize=(12, 10))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax4 = fig.add_subplot(4, 1, 2);  ax5 = fig.add_subplot(4, 1, 3);  ax6 = fig.add_subplot(4, 1, 4)\n",
@@ -439,7 +457,7 @@
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);   ax6.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "# range: Y-axis\n",
-    "ylim=[10**(p_raw_min-4), 10**(p_raw_max)]\n",
+    "ylim=[10**(p_min), 10**(p_max)]\n",
     "ax1.set_ylim(ylim); ax4.set_ylim(ylim);  ax5.set_ylim(ylim); ax6.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
@@ -470,8 +488,9 @@
    "outputs": [],
    "source": [
     "n_sweep = np.int16(n_time0/2)\n",
-    "n_sweep = n_time0-3\n",
+    "# n_sweep = n_time0-3\n",
     "print(\"[mid]  SWEEP:\", n_num0, \"in total of\", n_time0)\n",
+    "p_min = p_raw_min-4;  p_max = p_raw_max\n",
     "\n",
     "fig = plt.figure(figsize=(12, 10))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax4 = fig.add_subplot(4, 1, 2);  ax5 = fig.add_subplot(4, 1, 3);  ax6 = fig.add_subplot(4, 1, 4)\n",
@@ -498,7 +517,7 @@
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);   ax6.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "# range: Y-axis\n",
-    "ylim=[10**(p_raw_min-4), 10**(p_raw_max)]\n",
+    "ylim=[10**(p_min), 10**(p_max)]\n",
     "ax1.set_ylim(ylim);  ax4.set_ylim(ylim);  ax5.set_ylim(ylim);  ax6.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
@@ -529,6 +548,7 @@
    "outputs": [],
    "source": [
     "n_sweep = n_time0-1\n",
+    "p_min = p_raw_min-2;  p_max = p_raw_max-7\n",
     "\n",
     "fig = plt.figure(figsize=(12, 10))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax4 = fig.add_subplot(4, 1, 2);  ax5 = fig.add_subplot(4, 1, 3);  ax6 = fig.add_subplot(4, 1, 4)\n",
@@ -559,7 +579,7 @@
     "xlim=[1388, 1400]\n",
     "ax1.set_xlim(xlim);  ax4.set_xlim(xlim);  ax5.set_xlim(xlim);  ax6.set_xlim(xlim)\n",
     "\"\"\"\n",
-    "ylim=[10**(p_raw_min-4), 10**(p_raw_max)]\n",
+    "ylim=[10**(p_min), 10**(p_max)]\n",
     "ax1.set_ylim(ylim);  ax4.set_ylim(ylim);  ax5.set_ylim(ylim);  ax6.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
@@ -591,8 +611,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_min0 = p_min - 4\n",
-    "p_max0 = p_max\n",
+    "p_min = p_min0 - 4\n",
+    "p_max = p_max0\n",
     "#\n",
     "n_num = n_time0 * n_block0\n",
     "EE_2d   = np.ravel(spec.EE);   EE_2d   = EE_2d.reshape(n_num, n_length0).transpose()\n",
