--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/9"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/15"
    ]
   },
   {
@@ -104,10 +104,9 @@
    "outputs": [],
    "source": [
     "# *** Ground - Ver.2 ***\n",
-    "\"\"\"\n",
-    "\"\"\"\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
+    "\"\"\"\n",
     "data_name_list = ['SID03_20231024-0036.cdf']\n",
     "data_name_list = ['SID03-2ch-comp0-20231117-1438.cdf']\n",
     "data_name_list = ['SID03-2ch-comp1-20231117-1448.cdf']\n",
@@ -116,6 +115,7 @@
     "data_name_list = ['SID03-3ch-comp1-20231117-1418.cdf']\n",
     "data_name_list = ['SID03-3ch-comp2-20231117-1429.cdf']\n",
     "data_name_list = ['SID03-3ch-comp3-20231117-1432.cdf']\n",
+    "\"\"\"\n",
     "\n",
     "\"\"\"\n",
     "# 202310 -- FS\n",
@@ -201,8 +201,14 @@
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202406_EM3/cdf/'\n",
     "# COMP1->2, 2->1\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240614T161148-20240614T162539_V01___TMIDX_00000.bin.cdf',  \n",
-    "                                   ]\n",
-    "\"\"\""
+    "                 ]\n",
+    "\"\"\"\n",
+    "\n",
+    "# 202407 -- LEGA check\n",
+    "# TEST\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202407_FS/cdf_20240715/'\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240716T152808-20240716T153933_V01.cdf',\n",
+    "                 ]"
    ]
   },
   {
@@ -218,19 +224,19 @@
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240126T083835_V01.cdf',\n",
     "                 ]\n",
-    "\"\"\"\n",
     "\n",
     "# 20240701\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/01/'        # CDF data folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240701T011127_V01.cdf',\n",
     "                 ]\n",
+    "\"\"\"\n",
     "\n",
+    "\"\"\"\n",
     "# 20240706\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240706T121009_V01.cdf',\n",
+    "data_name_list = [# 'JUICE_L1a_RPWI-HF-SID3_20240706T121009_V01.cdf',\n",
     "                  'JUICE_L1a_RPWI-HF-SID3_20240706T175202_V01.cdf',\n",
     "                 ]\n",
-    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -264,12 +270,15 @@
     "                 ]\n",
     "# *** 2023/5/23 after Y deployment of RWI\n",
     "data_name_list = ['05/23/SID3_20230523T110933-20230523T111149.cdf']\n",
+    "\n",
     "# *** 2023/5/23 background\n",
     "data_name_list = ['05/23/SID3_20230523T121538-20230523T122526.cdf',\n",
     "                  '05/23/SID3_20230523T124134-20230523T125122.cdf',\n",
     "                  '05/23/SID3_20230523T125738-20230523T130726.cdf',\n",
     "                 ]\n",
+    "\"\"\"\n",
     "\n",
+    "\"\"\"\n",
     "# *** 20230525 \n",
     "data_name_list = ['05/25/SID3_20230525T130149-20230525T131137.cdf',\n",
     "                  '05/25/SID3_20230525T150435-20230525T151423.cdf',\n",
@@ -367,10 +376,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Group read\n",
     "\"\"\"\n",
-    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
-    "data_name = 'SID3*.cdf'\n",
+    "# *** Group read\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202407_FS/cdf_20240716/'        # CDF data folder\n",
+    "data_name = '*SID3*.cdf'\n",
     "cdf_file = data_dir + data_name\n",
     "data_name_list = glob.glob(cdf_file)\n",
     "num_list = len(data_name_list)\n",
@@ -533,7 +542,7 @@
    "id": "c661f058",
    "metadata": {},
    "source": [
-    "### Raw"
+    "# Raw"
    ]
   },
   {
@@ -673,8 +682,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(data.epoch)\n",
-    "print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)"
+    "print(data.epoch[160:170])\n",
+    "# print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)\n",
+    "# print(freq1)\n",
+    "print(data.complex[160:170])\n",
+    "print(data.cal_signal)\n",
+    "print(data.onboard_cal)\n",
+    "print(data.RFI_rejection)\n",
+    "print(data.Pol_sep_SW)"
    ]
   },
   {
@@ -695,7 +710,7 @@
     "# Sweep_num\n",
     "n0 = 0;   n1 = n_time0//2;  n2 = n_time0-1  # 11\n",
     "# Y-range\n",
-    "p_min = p_min0;  p_max = p_max0\n",
+    "p_min = p_min0;  p_max = p_max0-2\n",
     "# X-range\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
@@ -1062,7 +1077,7 @@
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max\n",
     "# Y-range\n",
-    "p_min0 = p_min;  p_max0 = p_max\n",
+    "p_min = p_min0;  p_max = p_max0\n",
     "\n",
     "fig = plt.figure(figsize=(12, 8))\n",
     "ax1 = fig.add_subplot(2, 1, 1)\n",
