--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -108,10 +108,11 @@
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID04_20231024-0042.cdf',\n",
-    "                  'SID04-comp0-20231117-1529.cdf',\n",
-    "                  'SID04-comp1-20231117-1532.cdf',\n",
+    "                  #'SID04-comp0-20231117-1529.cdf',\n",
+    "                  #'SID04-comp1-20231117-1532.cdf',\n",
     "                  ]\n",
     "\n",
+    "\"\"\"\n",
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID04_Seq01.cdf',\n",
@@ -122,12 +123,10 @@
     "                  'SID04_Seq20.cdf',\n",
     "                  ]\n",
     "\n",
-    "\"\"\"\n",
     "# 202312 -- Checkout\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202312_C/cdf/'    # 202312_FS test folder\n",
     "data_name_list = ['SID4_RPWI_NEWv2_SCI.cdf',\n",
     "                 ]\n",
-    "\"\"\"\n",
     "\n",
     "# 202405 -- dryrun check\n",
     "# LGA\n",
@@ -135,7 +134,8 @@
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID4_20000108T053334-20000108T054137_V01___TMIDX_00000.bin.cdf',   # pc2_LGA-dryrun_RPW-SEQ-01a-1_2024_05_15_15_30_16/TM00\n",
     "                  'JUICE_L1a_RPWI-HF-SID4_20000108T054148-20000108T054316_V01___TMIDX_00001.bin.cdf',   # pc2_LGA-dryrun_RPW-SEQ-01a-1_2024_05_15_15_30_16/TM01\n",
     "                  'JUICE_L1a_RPWI-HF-SID4_20000108T061111-20000108T061524_V01___TMIDX_00000.bin.cdf',   # pc2_LGA-dryrun_RPW-SEQ-01a-2_2024_05_15_16_07_58\n",
-    "                 ]"
+    "                 ]\n",
+    "\"\"\""
    ]
   },
   {
@@ -436,6 +436,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88cc49bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"N_samp:\", data.N_samp[0], \"   decimation:\", juice_cdf._sample_rate(data.decimation[0]), \"   N_time:\", n_time0) \n",
+    "peak_E = np.ravel(data.EuEu[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]))\n",
+    "peak_E = np.ravel(data.EvEv[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]))\n",
+    "peak_E = np.ravel(data.EwEw[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]))\n",
+    "print(\"T_HF-FPGA\", data.T_HF_FPGA[np.int16(n_time0/2)])\n",
+    "print(\"T_RWI-CH1\", data.T_RWI_CH1[np.int16(n_time0/2)])\n",
+    "print(\"T_RWI-CH2\", data.T_RWI_CH2[np.int16(n_time0/2)])"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "dccd566c",
@@ -458,6 +474,7 @@
     "f_min = f_min0;  f_max = f_max0\n",
     "# Y-range\n",
     "p_min = p_min0;  p_max = p_max0\n",
+    "# p_min = p_min0+.5;  p_max = p_max0-5\n",
     "\n",
     "fig = plt.figure(figsize=(12, 12))\n",
     "ax1 = fig.add_subplot(4, 1, 1);   ax5 = fig.add_subplot(4, 1, 2);  ax6 = fig.add_subplot(4, 1, 3);  ax7 = fig.add_subplot(4, 1, 4)\n",
