--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -107,9 +107,11 @@
     "data_name = 'SID05_20231117-1603.cdf'\n",
     "data_name = 'SID05_20231117-1611.cdf'\n",
     "\n",
+    "\"\"\"\n",
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
-    "data_name = 'SID05_Seq05.cdf'"
+    "data_name = 'SID05_Seq05.cdf'\n",
+    "\"\"\""
    ]
   },
   {
@@ -389,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
