--- a/JUICE-CDF-HF-SID20_sample.ipynb
+++ b/JUICE-CDF-HF-SID20_sample.ipynb
@@ -109,6 +109,7 @@
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID20_20231024-0042.cdf']\n",
     "\n",
+    "\"\"\"\n",
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID20_Seq01.cdf',\n",
@@ -135,7 +136,6 @@
     "                  'JUICE_L1a_RPWI-HF-SID20_20000108T054142-20000108T054318_V01___TMIDX_00001.bin.cdf',  # pc2_LGA-dryrun_RPW-SEQ-01a-1_2024_05_15_15_30_16/TM01\n",
     "                  'JUICE_L1a_RPWI-HF-SID20_20000108T061058-20000108T061531_V01___TMIDX_00000.bin.cdf',  # pc2_LGA-dryrun_RPW-SEQ-01a-2_2024_05_15_16_07_58\n",
     "                 ]\n",
-    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -147,8 +147,8 @@
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
-    "# 20240126\n",
     "\"\"\"\n",
+    "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20240126T113714_V01.cdf',\n",
     "                  'JUICE_L1a_RPWI-HF-SID20_20240126T114800_V01.cdf',\n",
@@ -472,6 +472,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72512c8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"N_samp:\", data.N_samp[0], \"   decimation:\", juice_cdf._sample_rate(data.decimation[0])) \n",
+    "peak_E = np.ravel(data.EuEu[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]))\n",
+    "peak_E = np.ravel(data.EvEv[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]))\n",
+    "peak_E = np.ravel(data.EwEw[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]))\n",
+    "print(\"T_HF-FPGA\", data.T_HF_FPGA)\n",
+    "print(\"T_RWI-CH1\", data.T_RWI_CH1)\n",
+    "print(\"T_RWI-CH2\", data.T_RWI_CH2)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "dccd566c",
@@ -494,6 +510,7 @@
     "f_min = f_min0;  f_max = f_max0\n",
     "# Y-range\n",
     "p_min = p_min0;  p_max = p_max0\n",
+    "p_min = p_min0;  p_max = p_max0-5\n",
     "\n",
     "fig = plt.figure(figsize=(12, 12))\n",
     "ax1 = fig.add_subplot(4, 1, 1);   ax5 = fig.add_subplot(4, 1, 2);  ax6 = fig.add_subplot(4, 1, 3);  ax7 = fig.add_subplot(4, 1, 4)\n",
@@ -884,6 +901,9 @@
     "# range: X-axis\n",
     "xlim=[f_min, f_max]\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim);\n",
+    "\n",
+    "# range: Y-axis\n",
+    "ylim=[10**p_min, 10**p_max]; ax1.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
